@@ -8,6 +8,9 @@ Version 0.10
 
 # SYNOPSIS
 
+`DateTime::Format::Genealogy` is a Perl module designed to parse genealogy-style date formats and convert them into [DateTime](https://metacpan.org/pod/DateTime) objects.
+It uses [Genealogy::Gedcom::Date](https://metacpan.org/pod/Genealogy%3A%3AGedcom%3A%3ADate) to parse dates commonly found in genealogical records while also handling date ranges and approximate dates.
+
     use DateTime::Format::Genealogy;
     my $dtg = DateTime::Format::Genealogy->new();
     # ...
@@ -22,7 +25,7 @@ Creates a DateTime::Format::Genealogy object.
 
 Given a date,
 runs it through [Genealogy::Gedcom::Date](https://metacpan.org/pod/Genealogy%3A%3AGedcom%3A%3ADate) to create a [DateTime](https://metacpan.org/pod/DateTime) object.
-If a date range is given, return a two element array in array context, or undef in scalar context
+If a date range is given, return a two-element array in array context, or undef in scalar context
 
 Returns undef if the date can't be parsed,
 is before AD100,
@@ -32,9 +35,20 @@ Can be called as a class or object method.
     my $dt = DateTime::Format::Genealogy->new()->parse_datetime('25 Dec 2022');
 
 Optional arguments:
-date: the date to be parsed
-quiet: set to fail silently if there is an error with the date
-strict: more strictly enforce the Gedcom standard, for example don't allow long month names
+
+- `date`
+
+    The date to be parsed.
+
+- `quiet`
+
+    Set to fail silently if there is an error with the date.
+
+- `strict`
+
+    More strictly enforce the Gedcom standard,
+    for example,
+    don't allow long month names.
 
 # AUTHOR
 
@@ -46,7 +60,7 @@ Please report any bugs or feature requests to the author.
 This module is provided as-is without any warranty.
 
 I can't get [DateTime::Format::Natural](https://metacpan.org/pod/DateTime%3A%3AFormat%3A%3ANatural) to work on dates before AD100,
-so this module rejects dates that old.
+so this module rejects dates that are that old.
 
 # SEE ALSO
 
