@@ -16,8 +16,8 @@ ERROR: {
 	does_carp_that_matches(sub { $f->parse_datetime(date =>, '29 Se 1939', strict => 1) }, qr/^Unparseable date/);
 	does_carp_that_matches(sub { $f->parse_datetime(date =>, '29 Sep. 1939', strict => 1) }, qr/^Unparseable date/);
 	does_carp_that_matches(sub { $f->parse_datetime('31 Nov 1939') }, qr/^31 Nov 1939/);
-	does_croak_that_matches(sub { $f->parse_datetime(['29 Sep 1939']) }, qr/^Usage:/);
 	does_croak_that_matches(sub { $f->parse_datetime({ datex => '30 Sep 1939' }) }, qr/^Usage:/);
+	does_croak_that_matches(sub { $f->parse_datetime(['29 Sep 1939']) }, qr/^Usage:/);
 	does_carp_that_matches(sub { $f->parse_datetime('Bef 29 Sep 1939') }, qr/invalid/);
 	does_carp_that_matches(sub { $f->parse_datetime(date => 'bef 29 Sep 1939', strict => 1) }, qr/need an exact date/);
 	does_carp_that_matches(sub { $f->parse_datetime('Aft 1 Jan 2000') }, qr/invalid/);
